# xserver

./: .gitignore  LICENSE  other.org  sync.sh
Server/: CMakeLists.txt  asan.help  check_srv_alive.sh  cmake_flags  cmake_ldflags  comm.mk  cscope.sh  find_memerr.sh  generate_config.sh  guild_wait.sh  history.sh  lua_data  map_res  mysql_lib_dir.sh  object.sh  pack.sh  print_eth0.sh  qidong_server.sh  raidsrv_config.lua  reload.sh  reload_so.sh  restart.sh  resume.sh  resume2.sh  rm_memerr.sh  server_info.ini  show_all_pid.sh  showurl.ini  stop.sh  suppr.txt  svnstatus.sh  update_server_info.sh
Server/activity_srv/: CMakeLists.txt  activity_config.cpp  activity_config.h  activity_srv.cpp  activity_util.cpp  activity_util.h  conn_node_activitysrv.cpp  conn_node_activitysrv.h  log4crc
Server/ai_srv/: CMakeLists.txt  ai_srv.cpp  ai_srv.h  conn_node_aisrv.cpp  conn_node_aisrv.h  global_param.cpp  global_param.h  listen_node_aisrv.cpp  listen_node_aisrv.h  log4crc  lua_config.cpp  lua_config.h  uuid.cpp  uuid.h
Server/cgi/: cgi_add_account_server.cpp  cgi_game_login.cpp  cgi_get_account_server.cpp  get_account_server.cpp  rebuild_account_server.cpp  show.cpp
Server/client_srv/: CMakeLists.txt  client_info.ini  client_srv.cpp  conn_node_clientsrv.cpp  conn_node_clientsrv.h  log4crc  makefile
Server/comm_game/: attr_id.h  comm_define.h  error_code.h
Server/comm_include/: ResConv.h  ResLoader.h  ResMapTempete.h  account_help.h  app_data_statis.h  cgi_common.h  comm.h  conn_node.h  deamon.h  flow_record.h  game_event.h  game_helper.h  get_cpu_pulse.h  listen_node.h  lua_load.h  lua_template.h  mem_pool.h  minheap.h  mysql_module.h  oper_config.h  redis_client.h  redis_util.h  send_mail.h  server_proto.h  sortarray.h  stl_relation.h  tea.h  time_helper.h  unit_path.h  utf8_len.h
Server/comm_lib/: CMakeLists.txt  GRand.cpp  ResLoader.cpp  account_help.cpp  check_range.cpp  conn_node.cpp  deamon.cpp  flow_record.cpp  game_event.cpp  game_helper.cpp  listen_node.cpp  lua_load.cpp  makefile.old  mem_pool.cpp  minheap.cpp  mysql_module.cpp  oper_config.cpp  radix-tree.cpp  redis_client.cpp  redis_util.cpp  sortarray.cpp  sproto.cpp  tea.cpp  time_helper.cpp  unit_path.cpp  utf8_len.cpp
Server/conn_srv/: CMakeLists.txt  conn_node_activity.cpp  conn_node_activity.h  conn_node_client.cpp  conn_node_client.h  conn_node_doufachang.cpp  conn_node_doufachang.h  conn_node_dump.cpp  conn_node_dump.h  conn_node_friend.cpp  conn_node_friend.h  conn_node_gamesrv.cpp  conn_node_gamesrv.h  conn_node_guild.cpp  conn_node_guild.h  conn_node_login.cpp  conn_node_login.h  conn_node_mail.cpp  conn_node_mail.h  conn_node_raidsrv.cpp  conn_node_raidsrv.h  conn_node_rank.cpp  conn_node_rank.h  conn_node_trade.cpp  conn_node_trade.h  conn_srv.cpp  listen_node_activity.cpp  listen_node_activity.h  listen_node_client.cpp  listen_node_doufachang.cpp  listen_node_doufachang.h  listen_node_dump.cpp  listen_node_dump.h  listen_node_friend.cpp  listen_node_friend.h  listen_node_gamesrv.cpp  listen_node_gamesrv.h  listen_node_guild.cpp  listen_node_guild.h  listen_node_login.cpp  (+11 more)
Server/conn_srv_2/: CMakeLists.txt  chat.htm  conn_node_client.cpp  conn_node_client.h  conn_srv.cpp  listen_node_client.cpp  listen_node_client.h  nginx.conf  player.pb-c.c  player.pb-c.h  player.proto  websocket.cpp  websocket.h
Server/db_srv/: CMakeLists.txt  conn_node_dbsrv.cpp  conn_node_dbsrv.h  db_srv.cpp  listen_node_dbsrv.cpp  listen_node_dbsrv.h  log4crc  makefile.old
Server/doc/: code.org  index.org  raid.org  raid_enter_check.org  resume.org  skill_damage.org  skill_damage2.org  skill_damage3.org  skill_proto.org  各系统要点易错点.docx  开服步骤.txt
Server/doufachang_srv/: CMakeLists.txt  conn_node_doufachangsrv.cpp  conn_node_doufachangsrv.h  doufachang_config.cpp  doufachang_config.h  doufachang_srv.cpp  doufachang_util.cpp  doufachang_util.h  log4crc
Server/dump_srv/: CMakeLists.txt  conn_node_dumpsrv.cpp  conn_node_dumpsrv.h  dump_srv.cpp  dump_srv.py  get_one_msg.py  get_uuid_type.py  log4crc  lua_debug.cpp  makefile  makeproto.sh  print_151004009.py  print_activity.py  print_add_player.py  print_add_truck.py  print_attack_fly.py  print_attack_pos.py  print_attr_changed.py  print_bag.py  print_cast_skill.py  print_cast_skill2.py  print_delete_scene_entity.py  print_enter_raid_notify.py  print_hp_changed.py  print_login.py  print_monster_ai.py  print_move_direct.py  print_mysql_data.py  print_out_stuck.py  print_partner.py  print_partner_info.py  print_partner_recruit.py  print_player_buff.py  print_player_db.py  print_player_guild_info.py  print_pos_sync.py  print_pos_y_changed.py  print_pvp_box.py  print_pvp_raid.py  print_qiecuo.py  (+23 more)
Server/excel_data/: excel_data.cpp  excel_data.h  generate_head  generate_head.c  init_id.awk  makefile  proto.sproto  reset_id.awk  sproto.h  sprotoc_common.h  sprotoparser.lua
Server/friend_srv/: CMakeLists.txt  conn_node_friendsrv.cpp  conn_node_friendsrv.h  friend_config.cpp  friend_config.h  friend_srv.cpp  friend_struct.h  friend_util.cpp  friend_util.h  log4crc
Server/game_srv/: CMakeLists.txt  clean_shm.sh  conn_node_aisrv.cpp  conn_node_aisrv.h  conn_node_dbsrv.cpp  conn_node_dbsrv.h  conn_node_gamesrv.cpp  conn_node_gamesrv.h  game_srv.cpp  game_srv.h  global_param.cpp  global_param.h  global_shared_data.cpp  global_shared_data.h  log4crc  lua_config.cpp  lua_config.h  makefile.old  pkmode.org  save_core.sh  uuid.cpp  uuid.h
Server/guild_srv/: CMakeLists.txt  conn_node_guildsrv.cpp  conn_node_guildsrv.h  guild_answer.cpp  guild_answer.h  guild_config.cpp  guild_config.h  guild_srv.cpp  guild_struct.cpp  guild_struct.h  guild_util.cpp  guild_util.h  log4crc
Server/item_srv/: CMakeLists.txt  conn_node_item.cpp  conn_node_item.h  item_node_gamesrv.cpp  item_node_gamesrv.h  item_srv.cpp  listen_node_gamesrv.cpp  listen_node_gamesrv.h  listen_node_item.cpp  listen_node_item.h
Server/login_srv/: CMakeLists.txt  conn_node_loginsrv.cpp  conn_node_loginsrv.h  log4crc  login_config.cpp  login_config.h  login_srv.cpp  makefile.old
Server/mail_srv/: CMakeLists.txt  conn_node_mailsrv.h  (+4 more)
(+825 files in other folders)
